app/invocation/invocation.css
/* ... */
.input-tree-node-name .digest-component {
  margin-left: 8px;
}

.input-tree-node-name .icon {
  opacity: 0.7;
}

.input-tree-node-name:hover .icon {
  opacity: 1;
}

.input-tree-node-children {
  border-left: 1px solid #ccc;
  padding-left: 8px;
  margin-left: 8px;
}

.input-tree-node-name {
  display: flex;
  margin-bottom: 2px;
  align-items: center;
}

.input-tree-node-name .folder-icon {
  /* Adjust optical alignment of folder icons */
  transform: translateY(-1px);
}

.input-tree-node-label {
  padding-top: 1px;
  flex-shrink: 0;
}

.invocation-action-card .text-link {
  font-weight: 600;
  text-decoration: underline;
  color: #212121;
}

.invocation-targets-card .targets-table {
  display: grid;
  grid-template-columns: auto max-content;

  --border-color: #eee;
  border: 1px solid var(--border-color);
  border-radius: 4px;
}

.invocation-targets-card .target-row {
  display: contents;
  user-select: text;
}

.invocation-targets-card .target-row > * {
  padding: 4px;
  display: flex;
  align-items: center;
  line-height: initial;
}

.invocation-targets-card .target-row > :first-child {
  padding-left: 8px;
}

.invocation-targets-card .target-row > :last-child {
  padding-right: 8px;
}

.invocation-targets-card .target-row:hover > * {
  background: #f5f5f5;
}

.invocation-targets-card .target-row:not(:last-child) > * {
  border-bottom: 1px solid var(--border-color);
}

.invocation-targets-card .target-row > * {
  min-height: 26px;
  display: flex;
  align-items: center;
  gap: 8px;
}

.invocation-targets-card .chevron-icon .icon {
  width: 20px;
  height: 20px;
  margin-right: -4px; /* offset flex gap */
}

.dense .invocation-targets-card .chevron-icon {
  display: none; /* show target status icon instead */
}

.dense .invocation-targets-card .title {
  margin-bottom: 4px;
}

.invocation-targets-card .target-label {
  display: flex;
  gap: 8px;
  font-weight: 600;
  color: #212121;
}

.invocation-targets-card .root-cause-badge {
  background: #eee;
  flex-shrink: 0;
  padding: 0 8px;
  border-radius: 16px;
  word-break: break-word;
}

.invocation-targets-card .target-duration {
  padding-left: 8px;
  color: #757575;
}

.invocation-action-card .icon.file-icon {
  margin-right: 4px;
  width: 18px;
  height: 18px;
}

.invocation-action-card .tree-node-symlink {
  display: flex;
  align-items: center;
  gap: 4px;

  .icon {
    opacity: 0.7;
    width: 18px;
    height: 18px;
  }

  .icon:hover {
    opacity: 1;
  }
}

.invocation-error-card .error-contents {
  background: #fafafa;
  border-radius: 8px;
  padding: 8px 16px;
  max-height: 360px;
  white-space: pre-wrap;
  overflow-y: scroll;
}

.file-name {
  display: flex;
  align-items: flex-start;
}

.file-name:hover {
  color: #888;
}

.file-name .digest-component {
  margin-left: 8px;
}

.invocation .trace-viewer {
  margin-top: 24px;
}

.cache-requests-card .action-id {
  font-weight: 600;
}

.cache-requests-card .action-id .digest-component {
  text-decoration: underline;
}

.cache-requests-card .chevron {
  margin-right: 0;
  width: 12px;
  height: 12px;
}

.cache-requests-card .title {
  display: flex;
  align-items: center;
}

.cache-requests-card .row {
  display: flex;
  align-items: center;
}

.cache-requests-card .column {
  display: flex;
  flex-direction: column;
}

.cache-requests-card .controls {
  gap: 8px;
}

.cache-requests-card .controls .separator {
  border-left: 1px solid #eee;
  align-self: stretch;
}

.cache-requests-card .controls button {
  font-weight: inherit;
  font-size: inherit;
}

.cache-requests-card .column-headers > div {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.cache-requests-card .row.action-label {
  gap: 4px;
  overflow: hidden;
}

.cache-requests-card .action-label > div {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.cache-requests-card .action-mnemonic {
  /* Don't let a really long target label cause the mnemonic to get truncated. */
  flex-shrink: 0;
}

.cache-requests-card .details {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.cache-requests-card .caption {
  color: #757575;
}

.cache-requests-card .group-title {
  display: flex;
  align-items: baseline;
  width: 100%;
  box-sizing: border-box;
  background: #eee;
}

.cache-requests-card .group-title > * {
  padding: 4px;
}

.cache-requests-card .target-id {
  background: #f5f5f5;
}

.cache-requests-card .group-contents {
  font-size: 14px;
}

.cache-requests-card .results-table {
  border: 1px solid #eee;
  border-radius: 4px;
}

.cache-requests-card .column-headers {
  border-bottom: 1px solid #eee;
}

.cache-requests-card .results-list,
.cache-requests-card .column-headers {
  display: flex;
  width: 100%;
}

.cache-requests-card .results-list > :nth-child(2n + 1) {
  background: #fafafa;
}

.cache-requests-card .results-list > .row {
  gap: 0;
}

.cache-requests-card .results-list > .row > div,
.cache-requests-card .row.column-headers > div {
  padding: 4px;
}

.cache-requests-card :is(.results-list .row, .column-headers.row) > div:not(:first-child) {
  border-left: 1px solid #eee;
}

.cache-requests-card .digest-column {
  width: 168px;
}

.cache-requests-card .digest-component-size {
  text-align: right;
}

.cache-requests-card .compressed-size-column {
  width: 88px;
  text-align: right;
}

.cache-requests-card .cache-type-column {
  width: 42px;
}

.cache-requests-card .duration-column {
  width: 60px;
  text-align: right;
}

.cache-requests-card .status-column {
  width: 60px;
}

.cache-requests-card .download-button {
  width: 18px;
  height: 18px;
  padding: 4px;
  margin: -2px;
  border-radius: 8px;
  stroke: #2196f3;
  cursor: pointer;
}

.cache-requests-card .download-button:hover {
  stroke: #03a9f4;
  background: #eee;
}

.cache-requests-card .name-column {
  width: 28%;
  max-width: 300px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;

  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 4px;
}
/* ... */

